--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
