--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The best game ever made by idiots",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "start": "webpack-dev-server --open --config webpack/webpack.dev.js",
     "test": "figa"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.1",
