--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack/webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack/webpack.dev.js",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "test": "figa"
   },
   "repository": {
@@ -19,8 +20,12 @@
   },
   "homepage": "https://github.com/basecoplan/TommyTheSpider#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-typescript": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -32,5 +37,8 @@
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "phaser": "^3.20.1"
   }
 }
