--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
     "module": "es6",
     "target": "es6",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": [
+      "./node_modules/phaser/types"
+    ],
+    "types": [
+      "Phaser"
+    ],
+    "allowSyntheticDefaultImports": true
   }
 }
