--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "tommythespider",
-  "version": "0.0.1",
-  "description": "The best game ever made by idiots",
-  "private": true,
-  "scripts": {
-    "build": "webpack --config webpack/webpack.prod.js",
-    "start": "webpack-dev-server --open --config webpack/webpack.dev.js",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "test": "figa"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/basecoplan/TommyTheSpider.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/basecoplan/TommyTheSpider/issues"
-  },
-  "homepage": "https://github.com/basecoplan/TommyTheSpider#readme",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-typescript": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "express": "^4.17.1",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "phaser": "^3.20.1"
-  }
+    "name": "tommythespider",
+    "version": "0.0.1",
+    "description": "The best game ever made by idiots",
+    "private": true,
+    "scripts": {
+        "build": "webpack --config webpack/webpack.prod.js",
+        "start": "webpack-dev-server --open --config webpack/webpack.dev.js",
+        "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+        "lint-fix": "eslint --ext .js,.jsx,.ts,.tsx . --fix",
+        "test": "figa"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/basecoplan/TommyTheSpider.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/basecoplan/TommyTheSpider/issues"
+    },
+    "homepage": "https://github.com/basecoplan/TommyTheSpider#readme",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^2.7.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.2.0",
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb-typescript": "^6.3.0",
+        "eslint-plugin-import": "^2.18.2",
+        "express": "^4.17.1",
+        "file-loader": "^4.2.0",
+        "html-webpack-plugin": "^3.2.0",
+        "style-loader": "^1.0.0",
+        "ts-loader": "^6.2.1",
+        "typescript": "^3.7.2",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-middleware": "^3.7.2",
+        "webpack-dev-server": "^3.9.0",
+        "webpack-merge": "^4.2.2"
+    },
+    "dependencies": {
+        "phaser": "^3.20.1"
+    }
 }
