--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "express": "^4.17.1",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.0",
+        "sass-loader": "^8.0.0",
         "style-loader": "^1.0.0",
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.2",
