--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": "airbnb-typescript/base",
   "rules": {
     "no-param-reassign": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "max-classes-per-file": "off"
   },
   "env": {
     "browser": true
